<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Library SibSIU"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">Information on book</string>
    <string name="pdPlease_wait">Please wait..</string>
    <string name="btLoad_more">Load more</string>
	<string name="btSearch">Search</string>
	<string name="plaseholder">None</string>
	<string name="author">Author: </string>
	<string name="txtHint">Enter key for search.</string>	
	<string name="searchHint">Who search</string>
	<string name="pref_domen_title">Address</string>
	<string name="pref_domen_msg">Select the address of library.</string>
	<string name="pref_key_domen">pref_key_domen</string>
	<string name="pref_domen_default">http://libr.sibsiu.ru/search/query?theme=mobile</string>
	<string name="pref_sort_title">Sorting</string>
	<string name="pref_sort_msg">Method of sorting search results.</string>
	<string name="pref_key_sort">pref_key_msg</string>
	<string name="pref_charecteristic_title">Characteristics of the book</string>
	<string name="pref_charecteristic_msg">Selecting displayed characteristics books.</string>
	<string name="pref_key_charecteristic">pref_key_charecteristic</string>
	<string name="pref_author_on">On</string>
	<string name="pref_author_off">Off</string>
	<string name="pref_author_title">Author</string>
	<string name="pref_author_summary">Display in list result.</string>
	<string name="pref_key_author">pref_key_author</string>
	<string name="char_publisher">Publisher</string>
	<string name="char_count_pages">Count pages</string>
	<string name="char_authors">Authors</string>
	<string name="char_description">Description</string>
	<string name="char_title">Title</string>
	<string name="char_cipher">Cipher</string>
	<string name="char_copies">Copies</string>
	<string name="char_items">Items</string>
	<string name="help_exit">Press again to exit</string>
	<string name="help_start">Quick search for books in the library</string>
	<string name="error_internet">Error: internet disabled or no results.</string>
	<string name="ver">Version 0.1r</string>
	
</resources>
